[package]
name = "slimevr_latency"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#bytes = "1"
protobuf = { version = "3.2.0", features = ["with-bytes"] }
tokio = { version = "1.24.2", features = ["full"] }
rosc = "0.9.1"

[build-dependencies]
protobuf-codegen = "3.2.0"
#protoc-bin-vendored = "3"
